test/corpus/kitchen_sink.txt
======
Circle
======

G0 X-5 Y0 Z0 F200
G2 X0 Y5 I5 J0 F200
G02 X5 Y0 I0 J-5
G02 X0 Y-5 I-5 J0
G02 X-5 Y0 I0 J5
G01 Z1 F500
G00 X0 Y0 Z5

---

(source_file
  (statement
    (command
      (command_name)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number)))
  (statement
    (command
      (command_name)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number)))
  (statement
    (command
      (command_name)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number)))
  (statement
    (command
      (command_name)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number)))
  (statement
    (command
      (command_name)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number)))
  (statement
    (command
      (command_name)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number)))
  (statement
    (command
      (command_name)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number))))

===========
Circle Inch
:skip
===========

N1 G17 G20 G90 G94 G54
N2 G0 Z0.25
N3 X-0.5 Y0.
N4 Z0.1
N5 G01 Z0. F5.
N6 G02 X0. Y0.5 I0.5 J0. F2.5
N7 X0.5 Y0. I0. J-0.5
N8 X0. Y-0.5 I-0.5 J0.
N9 X-0.5 Y0. I0. J0.5
N10 G01 Z0.1 F5.
N11 G00 X0. Y0. Z0.25

---



======
Spaces
======

G0X-5Y0Z0F200
G0 X-5 Y0 Z0 F200
G0 X -5 Y 0 Z 0 F 200

---

(source_file
  (statement
    (command
      (command_name)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number)))
  (statement
    (command
      (command_name)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number)))
  (statement
    (command
      (command_name)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number))
    (parameter
      (letter)
      (number))))
